# MentorX

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/: .env  run.py  server.js
backend/app/api/: access.py  roadmap.py
backend/config/: db.js
backend/middleware/: auth.js
backend/routes/: chat.js  index.js  mentor.js
backend2/: package-lock.json  package.json  server.js
backend2/routes/: users.js
frontend2/: index.html
frontend2/src/: App.jsx  i18n.js  main.jsx
frontend2/src/components/: AssessmentDashboard.jsx  DomainSection.jsx  Footer.jsx  MagicBento.jsx  Navbar1.jsx  RoadmapDashboard.jsx
frontend2/src/data/: resources.js
frontend2/src/pages/: CareerGuide.jsx  CareerPath.jsx  CareerResources.jsx  Contact.jsx  Dashboard.jsx  ExpertMentorship.jsx  LandingPage.jsx  (+5 more)
json/: Akash Verma_8ee82c22-1eb2-483e-957f-4e81ad0a4ffb.json  Vishal Raj_2591d6e4-a6d1-4357-b1c1-19e8ca0cd16d.json  Vishal Raj_3b0724c0-dbf9-4feb-a1cb-b826b286306d.json  Vishal Raj_d47ec26f-a82b-4ca9-8006-1596ba615991.json  Vishal Raj_ffe91b8a-1f59-4dae-adfa-2588e2c13ff8.json
mentors/: index.html  package-lock.json  package.json
mentors/src/: App.jsx  main.jsx
public/: manfiest.json  sw.js
src/: App.jsx  i18n.js  main.jsx  registerServiceWorker.js
src/Components/: DomainSection.jsx  Navbar.jsx
src/Locales/: english.json  hindi.json
src/Pages/: CareerResources.jsx  CareerSimulator.jsx  LandingPage.jsx
src/data/: resources.js
src/pages/: AboutUs.jsx  CareerGuide.jsx  Chatbot.jsx  Dashboard.jsx  MentorConnect.jsx
(+4 files in other folders)
